--- a/Foody Cook Book/Storyboard/Base.lproj/Main.storyboard
+++ b/Foody Cook Book/Storyboard/Base.lproj/Main.storyboard
@@ -304,15 +304,15 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xYM-cv-fku">
                                 <rect key="frame" x="0.0" y="146" width="414" height="707"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="r1H-2p-XwI">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="3" id="r1H-2p-XwI">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="3" maxX="0.0" maxY="3"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FCBHomeProductCollectionViewCell" id="CAz-Kf-fry" customClass="FCBHomeProductCollectionViewCell" customModule="Foody_Cook_Book" customModuleProvider="target">
-                                        <rect key="frame" x="84.5" y="0.0" width="245" height="221"/>
+                                        <rect key="frame" x="87" y="3" width="245" height="221"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NSF-ml-0nm">
                                             <rect key="frame" x="0.0" y="0.0" width="245" height="221"/>
